k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bolttickets
  labels:
    name: bolttickets
